[package]
name = "shutdownHelper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
eframe = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser"] }
regex = "1"

[build]
rustflags = ["-C", "target-feature=+crt-static"]

[profile.release]
lto = true
opt-level = "z"

[[bin]]
name = "shutdownHelper"
path = "src/main.rs"
